--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css" >
 </head>
 <body>
-    <h2>Un autoestopista galáctico</h1>
+    <h2>bolas chinas   XD</h1>
     <div class = "planets-container">
         <div class="sun"></div>
         <div class="planet-index" id="first-planet-index">
